[gd_scene load_steps=5 format=2]

[ext_resource path="res://Cleared.gd" type="Script" id=1]
[ext_resource path="res://font/TextFont.tres" type="DynamicFont" id=2]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://font/Quicksand-Regular.ttf"

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = SubResource( 1 )

[node name="Cleared" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 100
custom_constants/margin_top = 100
custom_constants/margin_left = 100
custom_constants/margin_bottom = 100
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 100.0
margin_top = 100.0
margin_right = 1180.0
margin_bottom = 620.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0, 0, 0, 0.235294 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 100.0
margin_top = 100.0
margin_right = 1180.0
margin_bottom = 620.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 50
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = 144.0
margin_right = 1080.0
margin_bottom = 194.0
size_flags_horizontal = 3
size_flags_vertical = 5
custom_fonts/font = SubResource( 2 )
text = "Level Cleared"
align = 1
valign = 1

[node name="Button" type="Button" parent="VBoxContainer"]
margin_left = 491.0
margin_top = 244.0
margin_right = 588.0
margin_bottom = 285.0
size_flags_horizontal = 4
size_flags_vertical = 5
custom_fonts/font = ExtResource( 2 )
action_mode = 0
text = "Retry?"
flat = true

[node name="Quit" type="Button" parent="VBoxContainer"]
margin_left = 507.0
margin_top = 335.0
margin_right = 572.0
margin_bottom = 376.0
size_flags_horizontal = 4
size_flags_vertical = 5
custom_fonts/font = ExtResource( 2 )
action_mode = 0
text = "Quit"
flat = true
[connection signal="cleared" from="." to="." method="_on_Cleared_cleared"]
[connection signal="over" from="." to="." method="_on_Cleared_over"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
